--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
+    "drizzle-zod": "^0.5.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "zod": "^3.22.4"
   }
 }
