✨ residency mail authentication done

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "resend": "^2.1.0",
     "zod": "^3.22.4"
   }
 }
